<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.catganisation.catalog.presentation.catdetails.CatBreedDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/pictureGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:src="@{viewModel.imageUrl}"
                tools:scaleType="centerCrop"
                tools:src="@drawable/ic_logo" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/pictureGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:fontFamily="sans-serif-black"
                android:text="@{viewModel.name}"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pictureGuideline"
                tools:text="Abyssinian" />

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{viewModel.description}"
                android:textColor="@color/subtitle"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="@+id/nameTV"
                app:layout_constraintStart_toStartOf="@+id/nameTV"
                app:layout_constraintTop_toBottomOf="@+id/nameTV"
                tools:text="The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals." />

            <TextView
                android:id="@+id/temperamentTitleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/temperament"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_subtitle"
                app:layout_constraintEnd_toStartOf="@+id/countryCodeTitleTV"
                app:layout_constraintStart_toStartOf="@+id/nameTV"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

            <TextView
                android:id="@+id/temperamentTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@{viewModel.temperament}"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="@+id/temperamentTitleTV"
                app:layout_constraintStart_toStartOf="@+id/temperamentTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/countryCodeTitleTV"
                tools:text="Active, Energetic, Independent, Intelligent, Gentle" />

            <TextView
                android:id="@+id/countryCodeTitleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/country_code"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_subtitle"
                app:layout_constraintEnd_toEndOf="@+id/nameTV"
                app:layout_constraintStart_toEndOf="@+id/temperamentTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

            <TextView
                android:id="@+id/countryCodeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@{viewModel.countryCode}"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="@+id/countryCodeTitleTV"
                app:layout_constraintStart_toStartOf="@+id/countryCodeTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/countryCodeTitleTV"
                tools:text="GR" />

            <TextView
                android:id="@+id/urlTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="@{() -> viewModel.onUrlClicked()}"
                android:text="@string/check_out_more"
                android:textColor="@color/title"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintStart_toStartOf="@+id/nameTV"
                app:layout_constraintTop_toBottomOf="@+id/temperamentTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>